--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 	otherSynth = new Tone.AMSynth().toMaster();
 	var Chord = [];
 	</script>
-	
-	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
 	 <script type="text/javascript">
   function myCallback(hypeDocument, element, event) {
     if (isScalePossible()){
@@ -96,7 +95,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="interactiveresume_hype_container" style="margin:auto;position:relative;width:900px;height:450px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="interactive_resume.hyperesources/interactiveresume_hype_generated_script.js?25442"></script>
+		<script type="text/javascript" charset="utf-8" src="interactive_resume.hyperesources/interactiveresume_hype_generated_script.js?28873"></script>
 	</div>
 
 	<!-- end copy -->
@@ -109,30 +108,27 @@
 
 		<div>N
 </div>
-		<div>Learner
-</div>
 		<div></div>
-		<div>PHP, Apache, Linux, Nginx, MYSQL, MongoDB, Javascript, HTML/CSS, Laravel, Silex, Zend, Phalcon, Vue.js, Meteor.js, Vagrant, Jquery, Bootstrap, Foundation, Ableton, Hype Tumult, Tone.js, ORM, PDO, Domain Driven Design, Agile, SCRUM, German, Spanish, Japanese, Violin, Wordpress, Magento, AWS, APIs, Payment Processors, C++, Java, XML, REST API, Animation, Sound design, PHPUnit, Node.js, Bolt, Blade, Angular.js, Canva,</div>
+		<div>Learned
+</div>
+		<div>PHP, Apache, Linux, Nginx, MYSQL, MongoDB, Javascript, HTML/CSS, Laravel, Silex, Zend, Phalcon, Vue.js, Meteor.js, Vagrant, Jquery, Bootstrap, Foundation, Ableton, Hype Tumult, Tone.js, ORM, PDO, Domain Driven Design, Agile, SCRUM, German, Spanish, Japanese, Violin, Wordpress, Magento, AWS, APIs, Payment Processors, C++, Java, XML, REST API, Animation, Sound design, PHPUnit, Node.js, Bolt, Blade, Angular.js, Canva, Slack, React, Photosho</div>
 		<div>Adept</div>
-		<div>Musician, Audiophile, Sound Engineer, Violinist, Multi Instrumentalist, Dancer, Live Looper, Guitar, Bass, Drums, Orch Dork, Indie Bander, Performer,</div>
+		<div>Sound loving, groove dancing, indie band nerd violinist that scapes sound and hacks audio with different instruments, people, and digital creatures.</div>
 		<div>A</div>
 		<div>NOISY</div>
-		<div>Sound Design
-
-</div>
-		<div>7 Years Professional Experience</div>
 		<div>L
 </div>
+		<div>7 Years Professional Experience</div>
+		<div>Musician</div>
 		<div>aA</div>
-		<div>Event Production
-</div>
-		<div>20+ Previous Clients, and Companies</div>
+		<div>Producer</div>
+		<div>20+ Previous Clients and Companies</div>
+		<div>Entrepreneur</div>
 		<div>Adaptable</div>
-		<div>Community Building
-</div>
+		<div>Designer</div>
 		<div>Passionate about Innovative Creation</div>
-		<div>Full Stack Development
-</div>
+		<div>Full Stack Developer</div>
+		<div>Engineer</div>
 
 	</div>
 
